--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,13 @@ Contact Me: fatema131khaled@gmail.com
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    font-family: system-ui
+    -o-box-sizing: border-box
 }
 
 /* Start Styling */
 
 body {
+    font-family: system-ui;
     background-image: url('../img/bg.jpg')
 }
 
@@ -33,15 +33,19 @@ strong {
 main {
     background: #FFD4E1;
     padding: 40px 15px;
-    width: fit-content;
     border-radius: 4px;
-    margin: 100px auto
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%)
 }
 
 main h1 {
     color: #BC496B;
-    display: flex;
-    flex-direction: column;
     align-items: center;
     width: fit-content;
     margin: auto;
@@ -101,9 +105,19 @@ ul li {
     margin-top: 14px
 }
 
-@media (max-width: 550px) {
+/* End Styling */
+
+/* Start Media Query */
+
+@media (max-width: 1024px) {
     main {
-        width: 94%
+        width: 65vw
+    }
+}
+
+@media (max-width: 768px) {
+    main {
+        width: 92vw
     }
 
     h3 {
@@ -124,7 +138,6 @@ ul li {
     section div input {
         width: 140px
     }
-
 }
 
-/* End Styling */
+/* End Media Query */
