--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*
 
-Template Name: Period Tracker
-Template Url: https://fate92ma.github.io/Period-Tracker
+App Name: Period Tracker
+App Url: https://fate92ma.github.io/Period-Tracker
 Contact Me: fatema131khaled@gmail.com
 
 */
